--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    android:padding="@dimen/common_margin_min"
-    tools:context=".OrderPizzaOrSaladaDetailFragment">
+    android:padding="@dimen/common_margin_min">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,17 +20,19 @@
             android:textAlignment="center"
             android:textSize="@dimen/common_text_max"
             android:textStyle="bold"
+
             tools:text="Pizza" />
 
 
         <TextView
-            android:id="@+id/txt_name"
+            android:id="@+id/txt_size"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin_min"
             android:textAlignment="center"
             android:textSize="@dimen/common_text_middle"
             android:textStyle="bold"
+
             tools:text="Big" />
 
 
@@ -77,7 +78,17 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/txt_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/common_margin_min"
+            android:textAlignment="center"
+            android:textSize="@dimen/common_text_max"
+            android:textStyle="bold"
+            tools:text="250$" />
+
+        <TextView
+            android:id="@+id/txt_euro_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/common_margin_min"
