--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ordersModule.OrdersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_orders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/common_margin_min" />
+        android:layout_margin="@dimen/common_margin_min"
+        android:layout_weight="1" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/txt_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/common_margin_min"
+        android:textAlignment="center"
+        android:textSize="@dimen/common_text_middle"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txt_euro_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/common_margin_min"
+        android:textAlignment="center"
+        android:textSize="@dimen/common_text_middle"
+        android:textStyle="bold" />
+</LinearLayout>
