--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -9,11 +9,40 @@
     android:focusable="true"
     app:cardCornerRadius="@dimen/common_card_radius">
 
-    <TextView
-        android:id="@+id/txt_order_type"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_margin_min"
-        android:textSize="@dimen/common_text_middle" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_order_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/common_margin_min"
+            android:layout_weight="1"
+            android:textSize="@dimen/common_text_middle" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_order_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/common_margin_min"
+                android:textSize="@dimen/common_text_middle" />
+
+            <TextView
+                android:id="@+id/txt_order_euro_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/common_margin_min"
+                android:textSize="@dimen/common_text_middle" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
